--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+.libertinus-mono-regular {
+  font-family: "Libertinus Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 body{
     margin: 0;
+    font-family: "Libertinus Mono";
 }
 
 .screen{
@@ -7,10 +15,45 @@ body{
     flex-direction: column;
 }
 
+/* header */
 .head{
     height: 15vh;
-    width: 100vw;
+    width: 94vw;
 
     background-color: antiquewhite;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    padding: 1vh 1vw 1vh 5vw;
+    gap: 5vw
+}
+
+
+.head p{
+    font-size: 3vw;
+}
+
+#headButton{
+    width: 15vw;
+    height: 10vh;
+
+    background-color: rgb(159, 147, 130);
+    border-style: solid;
+    border-radius: 10px;
+
+    font-size: 2vw;
+    margin-left: 15vw;
+}
+
+@media(max-width: 600px){
+    .head p{
+        font-size: 3vh;
+    }
+
+    #headButton{
+        font-size: 2vh;
+    }
 }
