--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ body{
 .prompt{
     display: flex;
     flex-direction: column;
+    gap:4vh;
+
     position: fixed;
     top: 50%;
     left: 50%;
@@ -84,13 +86,23 @@ body{
     transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
-.prompt p{
+.prompt form{
     font-size: 1.5vw;
+}
+.prompt p{
+    font-size: 1.7vw;
 }
 
 .prompt.active{
     opacity: 1;
     pointer-events: auto;
+}
+
+.inputBox{
+    width: 10vw;
+    height: 3vh;
+
+    font-size: 1vw;
 }
 @media(max-width: 600px){
     .head p{
