--- a/style.css
+++ b/style.css
@@ -104,6 +104,17 @@ body{
 
     font-size: 1vw;
 }
+
+#promptButton{
+    width: 10vw;
+    height: 5vh;
+
+    background-color: rgb(189, 135, 68);
+    border-radius: 10px;
+    border-style: solid;
+
+    font-size: 1.8vw;
+}
 @media(max-width: 600px){
     .head p{
         font-size: 3vh;
