--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ body{
     height: 3vh;
 
     font-size: 1vw;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
 }
 
 #promptButton{
