--- a/style.css
+++ b/style.css
@@ -52,12 +52,34 @@ body{
 
 .grid{
     width: 90vw;
-    height: 73vh;
-    padding: 5vh 5vw 5vh 5vw;
+    height: 70vh;
+    padding: 8vh 5vw 5vh 5vw;
 
     background-color: rgb(255, 210, 150);
+
+    display: grid;
+    grid-template-rows: repeat(5, 35vh);
+    grid-template-columns: repeat(4,22vw);
 }
 
+.tile{
+    width: 20vw;
+    height: 30vh;
+    background-color:antiquewhite;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border-radius: 5px;
+}
+
+.tile h1{
+    font-size: 2vw;
+}
+
+.tile p{
+    font-size: 1.5vw;
+}
 /* prompt */
 
 .prompt{
