--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ body{
     opacity: 0;
 
     transition: opacity 0.5s ease, transform 0.5s ease;
+    pointer-events: none;
 }
 
 .prompt form{
@@ -131,6 +132,7 @@ body{
     border-style: solid;
     border-width: 2px;
     border-color: black;
+
 }
 
 #promptButton{
