--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     gap: 1vh;
 
     border-radius: 5px;
@@ -148,6 +149,9 @@ body{
 
 .switch{
     font-size: 1vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 .check{
     width: 2vw;
@@ -168,9 +172,49 @@ body{
     .prompt{
         width: 60vw;
         height: 35vh;
+        gap:2vh;
     }
 
     .prompt p{
         font-size: 1.5vh;
     }
+
+    .prompt form{
+    font-size: 1.7vh;
+    }
+
+    .inputBox{
+        font-size: 2vh;
+        width: 25vw; 
+    }
+
+    /* Tile */
+
+    .grid{
+            grid-template-rows: repeat(5, 22vh);
+            grid-template-columns: repeat(2,50vw);
+    }
+    .tile{
+        width: 42vw;
+        height: 20vh;
+    }
+
+    .tile h1{
+    font-size: 2vh;
+    }
+
+    .tile p{
+        font-size: 1.5vh;
+        margin: 1vh 0vw 1vh 0vw;
+    }
+
+    .switch{
+    font-size: 1.5vh;
+    }
+
+    .check{
+    width: 4vw;
+    height: 4vh;
+    }
+
 }
